--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bazil Korath",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.6"
   }
 }
