--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bazil Korath",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
