logging in done with jwd

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DB_CONNECTION_URL = mongodb+srv://admin:bnmP7PDnPEmWTiSv@cluster0.u5egm.mongodb.net/facebookDB?retryWrites=true&w=majority
+
+ACCESS_TOKEN_SECRET = thisisahugesecret
