mongodb doesnt respond to nodejs app

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DB_CONNECTION_URL = mongodb+srv://admin:bnmP7PDnPEmWTiSv@cluster0.u5egm.mongodb.net/facebookDB?retryWrites=true&w=majority
+DB_CONNECTION_URL = mongodb+srv://admin:bnmP7PDnPEmWTiSv@cluster0.u5egm.mongodb.net/<dbname>?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = thisisahugesecret
+
