--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@google-cloud/storage": "^5.3.0",
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "multer": "^1.4.2",
     "socket.io": "^2.3.0"
   }
 }
