--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "streamifier": "^0.1.1"
   }
 }
