--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "sharp": "^0.26.1",
     "socket.io": "^2.3.0",
     "streamifier": "^0.1.1"
   }
